<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CardB</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="excerpt_example">\" Divided we fall \""</string>

    <!--<string name="app_name">Youtube Player</string>-->
    <!--<string name="title_logo">NATIONAL GEOGRAPHIC</string>-->
    <!--<string name="btn_skip_intro">Skip Intro</string>-->


    <string name="error_player">There was an error initializing the YouTubePlayer (%1$s)</string>
    <string name="title">TITLE</string>
    <string name="genre">GENRE</string>
    <string name="language">LANGUAGE</string>
    <string name="studio">STUDIO</string>
    <string name="plot">PLOT</string>
    <string name="cast">CAST</string>
    <string name="crew">CREW</string>
    <string name="reviews">REVIEWS</string>
    <string name="collections">COLLECTIONS</string>
    <string name="poster">Poster</string>
    <string name="name">NAME</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="born_in">Born in</string>
    <string name="biography">BIOGRAPHY</string>
    <string name="images">IMAGES</string>
    <string name="project_id_28">Project ID # 28</string>
    <string name="s_i_n_h_a">S I N H A</string>
    <string name="tv_status_tagline">"Status: "</string>

    <string name="path_search">
       M141,17 A9,9 0 1,1 142,16 L149,23
    </string>
    <string name="search_hint">Search</string>
    <string name="app_label" />
    <string name="cast_transition">cast_transition</string>
    <string name="lead_cast">Lead Cast Credits</string>
    <string name="crew_credits">Crew Cedits</string>
    <string name="dialog_fragment_title">Blur Dialog Fragment\\n\\nhttps://github.com/tvbarthel/BlurDialogFragment</string>
    <string name="runtime">RUNTIME</string>

</resources>
