<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/dialog_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_horizontal_margin">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/dialog_poster_path_person"
            android:layout_width="150dp"
            android:layout_height="200dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:background="@android:color/white"
            android:contentDescription="@string/poster"
            android:elevation="20dp"
            android:padding="1dp"
            android:scaleType="fitXY" />

        <com.example.cardviewdemo.TextViewPlus
            android:id="@+id/dialog_name_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/dialog_poster_path_person"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            android:paddingTop="10dp"
            android:text="@string/title"
            android:textColor="@color/text_white"
            android:textSize="15sp"
            android:textStyle="bold"
            app:customFont="fonts/cover.ttf" />

        <com.example.cardviewdemo.TextViewPlus
            android:id="@+id/dialog_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/dialog_name_tv"
            android:layout_toEndOf="@+id/dialog_poster_path_person"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            android:textColor="@color/text_white"
            android:textSize="12sp"
            app:customFont="fonts/Roboto-Regular.ttf" />


        <com.example.cardviewdemo.TextViewPlus
            android:id="@+id/dialog_genre_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/dialog_name"
            android:layout_toEndOf="@+id/dialog_poster_path_person"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            android:paddingTop="10dp"
            android:text="@string/genre"
            android:textColor="@color/text_white"
            android:textSize="15sp"
            android:textStyle="bold"
            app:customFont="fonts/cover.ttf" />

        <com.example.cardviewdemo.TextViewPlus
            android:id="@+id/dialog_genre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/dialog_genre_tv"
            android:layout_toEndOf="@+id/dialog_poster_path_person"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            android:textColor="@color/text_white"
            android:textSize="12sp"
            app:customFont="fonts/Roboto-Regular.ttf" />

        <com.example.cardviewdemo.TextViewPlus
            android:id="@+id/dialog_language_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/dialog_genre"
            android:layout_toEndOf="@+id/dialog_poster_path_person"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            android:paddingTop="10dp"
            android:text="@string/language"
            android:textColor="@color/text_white"
            android:textSize="15sp"
            android:textStyle="bold"
            app:customFont="fonts/cover.ttf" />

        <com.example.cardviewdemo.TextViewPlus
            android:id="@+id/dialog_language"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/dialog_language_tv"
            android:layout_toEndOf="@+id/dialog_poster_path_person"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            android:textColor="@color/text_white"
            android:textSize="12sp"
            app:customFont="fonts/Roboto-Regular.ttf" />


        <com.example.cardviewdemo.TextViewPlus
            android:id="@+id/dialog_tagline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/dialog_poster_path_person"
            android:gravity="center|center_vertical"
            android:paddingTop="20dp"
            android:textAlignment="center"
            android:textColor="@color/text_white"
            android:textSize="30sp"
            android:textStyle="bold"
            app:customFont="fonts/Gabrielle.ttf" />


        <ImageView
            android:id="@+id/dialog_more"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_below="@id/dialog_tagline"
            android:layout_centerInParent="true"
            android:clickable="true"
            android:padding="5dp"
            android:src="@drawable/arrow_more" />

    </RelativeLayout>
</RelativeLayout>